--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,7 +8,7 @@
 <ol>
 <li>Second Year Computer Science Graduate Student at NC State University.</li>
 <li>From India, School: NCSU</li>
-<li><img src="me.jpg" alt="img"></li>
+<li><img src="me.jpg" alt="img" height=100 width=100></li>
 <li>List of Skills:
 <ul>
 <li>Java</li>
